--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "classmap": [
-            "src/"
+            "nivellUno/"
         ]
     },
 
@@ -9,3 +9,4 @@
         "phpunit/phpunit": "^10.5"
     }
 }
+
